--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,7 +44,8 @@ find_package(Eigen3 REQUIRED)
 ##   * add "message_runtime" and every package in MSG_DEP_SET to
 ##     catkin_package(CATKIN_DEPENDS ...)
 ##   * uncomment the add_*_files sections below as needed
-##     and list every .msg/.srv/.action file to be processed
+##     and list every .msg/.
+##   /.action file to be processed
 ##   * uncomment the generate_messages entry below
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
@@ -55,10 +56,10 @@ find_package(Eigen3 REQUIRED)
  )
 
 ## Generate services in the 'srv' folder
-# add_service_files(
-#   FILES
-#   generate_trajectory.srv
-#)
+ add_service_files(
+   FILES
+   pose.srv
+)
 
 ## Generate actions in the 'action' folder
 # add_action_files(
