Chore: Fixes typo.

--- a/cfg/pose_param.cfg
+++ b/cfg/pose_param.cfg
@@ -3,7 +3,7 @@ PACKAGE = "cartesian_trajectory_generator"
 from dynamic_reconfigure.parameter_generator_catkin import *
 
 gen = ParameterGenerator()
-group_position=gen.add_group("Positon",type="hidden")
+group_position=gen.add_group("Position",type="hidden")
 group_orientation=gen.add_group("Orientation",type="hidden")
 group_preferences=gen.add_group("Preferences",type="hidden")
 group_ready=gen.add_group("Ready",type="hidden")
