Chore: Replaces quaternions with euler angles in dynamic server. The orientation is now chosen through euler angles in the dynamic-reconfig server.

--- a/cfg/pose_param.cfg
+++ b/cfg/pose_param.cfg
@@ -1,20 +1,21 @@
 PACKAGE = "cartesian_trajectory_generator"
     
 from dynamic_reconfigure.parameter_generator_catkin import *
+from math import pi 
 
 gen = ParameterGenerator()
 group_position=gen.add_group("Position",type="hidden")
 group_orientation=gen.add_group("Orientation",type="hidden")
 group_preferences=gen.add_group("Preferences",type="hidden")
-group_ready=gen.add_group("Ready",type="hidden")
+group_ready=gen.add_group("Send request",type="hidden")
 group_position.add("position_x", double_t, 0, "position X",    -0.5, -1.8,   1.8)
 group_position.add("position_y", double_t, 0, "position Y",    -0.5, -1.8,   1.8)
 group_position.add("position_z", double_t, 0, "position Z",    0.8, -1.8,   1.8)
 
-group_orientation.add("orientation_x", double_t, 0, "orientation X",    0, -1,   1)
-group_orientation.add("orientation_y", double_t, 0, "orientation Y",    0, -1,   1)
-group_orientation.add("orientation_z", double_t, 0, "orientation Z",    0, -1,   1)
-group_orientation.add("orientation_w", double_t, 0, "orientation W",    1, -1,   1)
+group_orientation.add("roll", double_t, 0, "Euler angle: roll",    pi, 0,   2*pi)
+group_orientation.add("pitch", double_t, 0, "Euler angle: pitch",    0, 0,   pi)
+group_orientation.add("yaw", double_t, 0, "Euler angle: yaw",    0, 0,   2*pi)
+
 
 
 group_ready.add("ready_to_send", bool_t, 0 , "True=Send new request", False)
