Config: changed the euler angle ranges These are supposedly the "correct" ranges acc. to the webpage of Eigen

--- a/cfg/pose_param.cfg
+++ b/cfg/pose_param.cfg
@@ -12,9 +12,9 @@ group_position.add("position_x", double_t, 0, "position X",    -0.5, -1.8,   1.8
 group_position.add("position_y", double_t, 0, "position Y",    -0.5, -1.8,   1.8)
 group_position.add("position_z", double_t, 0, "position Z",    0.8, -1.8,   1.8)
 
-group_orientation.add("roll", double_t, 0, "Euler angle: roll",    pi, 0,   2*pi)
-group_orientation.add("pitch", double_t, 0, "Euler angle: pitch",    0, 0,   pi)
-group_orientation.add("yaw", double_t, 0, "Euler angle: yaw",    0, 0,   2*pi)
+group_orientation.add("roll", double_t, 0, "Euler angle: roll",   pi, 0,   pi)
+group_orientation.add("pitch", double_t, 0, "Euler angle: pitch",    0, -pi,   pi)
+group_orientation.add("yaw", double_t, 0, "Euler angle: yaw",    0, -pi,   pi)
 
 
 
