--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,66 @@
-trigger-main:
+image: osrf/ros:melodic-desktop-full
+
+stages:          # List of stages for jobs, and their order of execution
+  - build
+  - depends
+
+variables:
+  DEBIAN_FRONTEND: noninteractive
+  TZ: Europe/Berlin
+  ROS_DISTRO: melodic
+
+
+before_script:
+  ##
+  ## Install ssh-agent if not already installed, it is required by Docker.
+  ## (change apt-get to yum if you use an RPM-based image)
+  ##
+  - 'command -v ssh-agent >/dev/null || ( apt-get update -y && apt-get install openssh-client -y )'
+
+  ##
+  ## Run ssh-agent (inside the build environment)
+  ##
+  - eval $(ssh-agent -s)
+
+  ##
+  ## Add the SSH key stored in SSH_PRIVATE_KEY variable to the agent store
+  ## We're using tr to fix line endings which makes ed25519 keys work
+  ## without extra base64 encoding.
+  ## https://gitlab.com/gitlab-examples/ssh-private-key/issues/1#note_48526556
+  ##
+  - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
+
+  ##
+  ## Create the SSH directory and give it the right permissions
+  ##
+  - mkdir -p ~/.ssh
+  - chmod 700 ~/.ssh
+
+  # For Docker builds disable host key checking. Be aware that by adding that
+  # you are suspectible to man-in-the-middle attacks.
+  # WARNING: Use this only with the Docker executor, if you use it with shell
+  # you will overwrite your user's SSH config.
+  - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
+
+
+build-catkin:       # This job runs in the build stage, which runs first.
+  stage: build
+  script:
+    - apt-get update
+    - mkdir -p ~/catkin_ws/src; cd ~/catkin_ws
+    - git clone --branch $CI_COMMIT_BRANCH git@git.cs.lth.se:robotlab/cartesian_trajectory_generator.git ~/catkin_ws/src/cartesian_trajectory_generator
+    - apt-get install -y python-catkin-tools python-rosdep
+    - rosdep update
+    - source /opt/ros/$ROS_DISTRO/setup.bash
+    - rosdep install --from-paths src --ignore-src --rosdistro=$ROS_DISTRO -y
+    - catkin init
+    - catkin config --extend /opt/ros/$ROS_DISTRO
+    - catkin build
+    - echo "Compile complete."
+
+
+trigger-heron:
+  stage: depends
   trigger: 
     project: robotlab/heron/heron_workspace_setup
     branch: master
